<resources>
    <string name="app_name">MyRuns2</string>
    <string name="ui_input_type">Input Type</string>
    <string name="ui_activity_type">Activity Type</string>
    <string name="ui_button_start">Start</string>
    <string name="ui_button_sync">Sync</string>
    <string-array name="string_input_type">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="string_activity_type">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="ui_button_save">Save</string>
    <string name="ui_button_cancel">Cancel</string>
    <string name="ui_button_ok">OK</string>

    <!--Preference-->
    <string name="title_edittext_preference">Comments</string>
    <string name="summary_edittext_preference">Please enter your comments</string>
    <string name="dialog_title_edittext_preference">Comments</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Unit Preference</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_fragment_preference">Fragment preference</string>
    <string name="summary_fragment_preference">Shows another fragment of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Webpage</string>
    <string name="summary_intent_preference">http://web.cs.dartmouth.edu/</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
    <string name="title_advanced_toggle_preference">Haunted preference</string>
    <string name="summary_on_advanced_toggle_preference">I\'m on! :)</string>
    <string name="summary_off_advanced_toggle_preference">I\'m off! :(</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="summary_privacy_setting">Posting your records anoymously</string>
    <string name="name_email_class_etc">Name, Email, Class, etc</string>
    <string name="user_profile">User Profile</string>
    <string name="additional_settings">Additional Settings</string>
    <string name="unit_preference">Unit Preference</string>
    <string name="summary_unit_preference">Select the units</string>
    <string name="misc">Misc.</string>

    <!-- MyRuns1 -->
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="ui_profile_toast_save_text">Profile saved</string>
    <string name="ui_profile_toast_cancel_text">Change canceled</string>
    <string name="ui_button_change_title">Change</string>
    <string name="ui_settings_profile_title">User Profile</string>
    <string name="ui_settings_profile_summary">Names, Email, Class, etc</string>
    <string name="ui_profile_photo_title">Profile photo:</string>
    <string name="ui_profile_photo_content_description">Profile Photo:</string>
    <string name="ui_profile_photo_picker_title">"Select profile image"</string>
    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>SD card</item>
        <item>Your desktop</item>
        <item>hahah</item>
    </string-array>
    <string name="ui_profile_photo_text">Profile Photo</string>
    <string name="ui_profile_name_title">Name</string>
    <string name="ui_profile_name_hint">Your Name</string>
    <string name="ui_profile_email_title">Email</string>
    <string name="ui_profile_email_hint">Your Email</string>
    <string name="ui_profile_phone_title">Phone</string>
    <string name="ui_profile_phone_hint">Your Phone Number</string>
    <string name="ui_profile_gender_title">Gender</string>
    <string name="ui_profile_gender_female">Female</string>
    <string name="ui_profile_gender_male">Male</string>
    <string name="ui_profile_class_title">Class</string>
    <string name="ui_profile_class_hint">eg. 2012</string>
    <string name="ui_profile_major_title">Major</string>
    <string name="ui_profile_major_hint">Your Major</string>
    <string name="ui_button_save_title">Save</string>
    <string name="ui_button_cancel_title">Cancel</string>

    <string name="preference_name">my_shared_preferences</string>
    <string name="preference_key_profile_photo">profile_photo</string>
    <string name="preference_key_profile_name">profile_name</string>
    <string name="preference_key_profile_email">profile_email</string>
    <string name="preference_key_profile_phone">profile_phone</string>
    <string name="preference_key_profile_class">profile_class</string>
    <string name="preference_key_profile_major">profile_major</string>
    <string name="preference_key_profile_gender">profile_gender</string>
    <string name="settings">Settings</string>
</resources>
